[gd_scene load_steps=17 format=3 uid="uid://s0r8oer47j70"]

[ext_resource type="Script" path="res://game_area.gd" id="1_byvhs"]
[ext_resource type="Theme" uid="uid://dj1oj2tmlsr64" path="res://Themes/pizzaButton.tres" id="2_1e1ju"]
[ext_resource type="FontFile" uid="uid://cr1dfxxkuo2u5" path="res://Fonts/PixelifySans-VariableFont_wght.ttf" id="2_x8g3n"]
[ext_resource type="Texture2D" uid="uid://bw0ais6qhwiar" path="res://Art/UI/foodUI/Sprite-uiNothing.png" id="3_2exo4"]
[ext_resource type="Texture2D" uid="uid://bmhk5yfbg0vo3" path="res://Art/UI/foodUI/Sprite-uiTomato.png" id="4_m50a3"]
[ext_resource type="Texture2D" uid="uid://d3xms6dgmfe3h" path="res://Art/UI/foodUI/Sprite-uiCheese.png" id="4_rl0f5"]
[ext_resource type="PackedScene" uid="uid://dkt4xfj26ay1a" path="res://gustavo.tscn" id="7_t8h4p"]

[sub_resource type="Animation" id="Animation_dkfqj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(552, 360)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Panel:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(48, 48)]
}

[sub_resource type="Animation" id="Animation_jum20"]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1184, 672), Vector2(856, 672), Vector2(768, 576), Vector2(616, 424), Vector2(448, 256), Vector2(256, 224), Vector2(64, 64), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-16, -8), Vector2(144, -8), Vector2(192, 64), Vector2(272, 144), Vector2(352, 224), Vector2(448, 224), Vector2(544, 288), Vector2(576, 328)]
}

[sub_resource type="Animation" id="Animation_5w3vm"]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(552, 360), Vector2(472, 280), Vector2(392, 200), Vector2(312, 120), Vector2(200, 40), Vector2(144, -8), Vector2(-16, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Panel:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(48, 48), Vector2(208, 208), Vector2(368, 368), Vector2(528, 528), Vector2(720, 624), Vector2(856, 672), Vector2(1184, 672)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mjbcx"]
_data = {
"RESET": SubResource("Animation_dkfqj"),
"fadeIn": SubResource("Animation_jum20"),
"fadeOut": SubResource("Animation_5w3vm")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tq6mn"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylhtt"]
bg_color = Color(0.913725, 0.521569, 0.215686, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.952941, 0.658824, 0.2, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_08y6k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rl0f5")
}],
"loop": true,
"name": &"cheese",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"dough",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2exo4")
}],
"loop": true,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_m50a3")
}],
"loop": true,
"name": &"tomato",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dey70"]
size = Vector2(1024, 45)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v1xtm"]

[node name="gameArea" type="Node2D"]
script = ExtResource("1_byvhs")
metadata/_edit_vertical_guides_ = [0.0, 1152.0]
metadata/_edit_horizontal_guides_ = [0.0, 648.0]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mjbcx")
}

[node name="Panel" type="Panel" parent="AnimationPlayer"]
visible = false
offset_left = 552.0
offset_top = 360.0
offset_right = 600.0
offset_bottom = 408.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tq6mn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="backgroundTextBox" type="Panel" parent="UI"]
offset_left = 320.0
offset_top = 472.0
offset_right = 1024.0
offset_bottom = 616.0
metadata/_edit_lock_ = true

[node name="charSpriteBackground" type="Panel" parent="UI"]
offset_left = 96.0
offset_top = 384.0
offset_right = 288.0
offset_bottom = 576.0
metadata/_edit_lock_ = true

[node name="startWork" type="Button" parent="UI"]
offset_left = 920.0
offset_top = 560.0
offset_right = 1016.0
offset_bottom = 608.0
theme = ExtResource("2_1e1ju")
theme_override_fonts/font = ExtResource("2_x8g3n")
theme_override_font_sizes/font_size = 24
text = "Start!"

[node name="dialogBox" type="Label" parent="UI"]
offset_left = 424.0
offset_top = 488.0
offset_right = 992.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("2_x8g3n")
theme_override_font_sizes/font_size = 23
autowrap_mode = 2

[node name="nameChar" type="Label" parent="UI"]
offset_left = 328.0
offset_top = 480.0
offset_right = 417.0
offset_bottom = 526.0
theme_override_fonts/font = ExtResource("2_x8g3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ylhtt")
text = "Boss: "

[node name="timer" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_x8g3n")
theme_override_font_sizes/font_size = 40
text = "Time: "

[node name="heldItem" type="Label" parent="UI"]
offset_left = 8.0
offset_top = 56.0
offset_right = 140.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("2_x8g3n")
theme_override_font_sizes/font_size = 30
text = "Held item"

[node name="itemPanel" type="Panel" parent="UI"]
offset_left = 8.0
offset_top = 96.0
offset_right = 144.0
offset_bottom = 224.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/itemPanel"]
position = Vector2(68, 64)
scale = Vector2(4.25, 4)
sprite_frames = SubResource("SpriteFrames_08y6k")
animation = &"none"

[node name="level" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/StaticBody2D"]
position = Vector2(576, 449.5)
shape = SubResource("RectangleShape2D_dey70")

[node name="Panel" type="Panel" parent="level"]
offset_left = 64.0
offset_top = 424.0
offset_right = 1088.0
offset_bottom = 464.0
theme_override_styles/panel = SubResource("StyleBoxFlat_v1xtm")

[node name="Gus" parent="." instance=ExtResource("7_t8h4p")]
position = Vector2(568, 328)
scale = Vector2(5, 5)

[connection signal="pressed" from="UI/startWork" to="." method="_on_start_work_pressed"]
